--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/trentrand/git-yank#readme",
   "dependencies": {
     "core-js": "^3.2.1",
+    "yargs": "^14.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.0",
